# stat

./: .gitignore  .travis.yml  AUTHORS.md  CMakeLists.txt  LICENSE.md  README.md  stat-scm-1.rockspec  stat.lua  tarantool.sh  tarantool_stat.sh
cmake/: FindTarantoolPrefix.cmake
debian/: changelog  control  copyright  prebuild.sh
rpm/: prebuild-el.sh  prebuild-fedora.sh  tarantool-stat.spec
stat/: CMakeLists.txt  init.lua  util.lua
tests/: 01-basic.lua  02-replica.lua  run_all.sh  setup.sh
tests/tnt/: init.lua
