
#
# Copyright (C) 2017 Tarantool AUTHORS: please see the [AUTHORS](AUTHORS.md) file.
#

install(FILES init.lua
    DESTINATION ${TARANTOOL_INSTALL_LUADIR}/stat)
install(FILES util.lua
  DESTINATION ${TARANTOOL_INSTALL_LUADIR}/stat)
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/../bin/tnt_check.sh
    DESTINATION /usr/bin/
    PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE
    WORLD_READ WORLD_EXECUTE)
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/../bin/tnt_collectd.sh
    DESTINATION /usr/bin/
    PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE
    WORLD_READ WORLD_EXECUTE)
